# GooseBumpsBackend

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  database.sqlite  docker-compose.yml
.github/workflows/: docker.yml
migrations/2022-10-01-100042_create_user/: up.sql
src/: bin.rs  database.rs  lib.rs  models.rs  schema.rs  solana.rs  web3.rs
src/contracts/: nft.sol
